--- a/configuration_service.html
+++ b/configuration_service.html
@@ -41,19 +41,23 @@ from .decorators import with_logger
 @with_logger
 class ConfigurationService(Service):
     def __init__(self) -&gt; None:
-        self._logger.info(&#34;Configuration service created.&#34;)
         self._store = config
         self._task = None
 
     async def initialize(self) -&gt; None:
         self._task = asyncio.create_task(self._worker_loop())
-        self._logger.info(&#34;Configuration service started.&#34;)
+        self._logger.info(&#34;Configuration service initialized&#34;)
 
     async def _worker_loop(self) -&gt; None:
         while True:
-            self._logger.debug(&#34;Refreshing configuration variables&#34;)
-            self._store.refresh()
-            await asyncio.sleep(self._store.CONFIGURATION_REFRESH_TIME)
+            try:
+                self._logger.debug(&#34;Refreshing configuration variables&#34;)
+                self._store.refresh()
+                await asyncio.sleep(self._store.CONFIGURATION_REFRESH_TIME)
+            except Exception:
+                self._logger.exception(&#34;Error while refreshing config&#34;)
+                # To prevent a busy loop
+                await asyncio.sleep(60)
 
     async def shutdown(self) -&gt; None:
         if self._task is not None:
@@ -81,21 +85,26 @@ class ConfigurationService(Service):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">class ConfigurationService(Service):
+<pre><code class="python">@with_logger
+class ConfigurationService(Service):
     def __init__(self) -&gt; None:
-        self._logger.info(&#34;Configuration service created.&#34;)
         self._store = config
         self._task = None
 
     async def initialize(self) -&gt; None:
         self._task = asyncio.create_task(self._worker_loop())
-        self._logger.info(&#34;Configuration service started.&#34;)
+        self._logger.info(&#34;Configuration service initialized&#34;)
 
     async def _worker_loop(self) -&gt; None:
         while True:
-            self._logger.debug(&#34;Refreshing configuration variables&#34;)
-            self._store.refresh()
-            await asyncio.sleep(self._store.CONFIGURATION_REFRESH_TIME)
+            try:
+                self._logger.debug(&#34;Refreshing configuration variables&#34;)
+                self._store.refresh()
+                await asyncio.sleep(self._store.CONFIGURATION_REFRESH_TIME)
+            except Exception:
+                self._logger.exception(&#34;Error while refreshing config&#34;)
+                # To prevent a busy loop
+                await asyncio.sleep(60)
 
     async def shutdown(self) -&gt; None:
         if self._task is not None:
