--- a/games/coop.html
+++ b/games/coop.html
@@ -26,9 +26,7 @@
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">import asyncio
-
-from .game import Game
+<pre><code class="python">from .game import Game
 from .typedefs import FA, GameType, InitMode, ValidityState, Victory
 
 
@@ -199,6 +197,7 @@ class CoopGame(Game):
 <li><code><a title="server.games.game.Game.get_player_option" href="game.html#server.games.game.Game.get_player_option">get_player_option</a></code></li>
 <li><code><a title="server.games.game.Game.get_team_sets" href="game.html#server.games.game.Game.get_team_sets">get_team_sets</a></code></li>
 <li><code><a title="server.games.game.Game.is_even" href="game.html#server.games.game.Game.is_even">is_even</a></code></li>
+<li><code><a title="server.games.game.Game.is_visible_to_player" href="game.html#server.games.game.Game.is_visible_to_player">is_visible_to_player</a></code></li>
 <li><code><a title="server.games.game.Game.launch" href="game.html#server.games.game.Game.launch">launch</a></code></li>
 <li><code><a title="server.games.game.Game.load_results" href="game.html#server.games.game.Game.load_results">load_results</a></code></li>
 <li><code><a title="server.games.game.Game.map_folder_name" href="game.html#server.games.game.Game.map_folder_name">map_folder_name</a></code></li>
