--- a/oauth_service.html
+++ b/oauth_service.html
@@ -91,6 +91,7 @@ class OAuthService(Service, name=&#34;oauth_service&#34;):
                         jwk[&#34;kid&#34;]: RSAAlgorithm.from_jwk(jwk)
                         for jwk in jwks[&#34;keys&#34;]
                     }
+            self._logger.info(&#34;Got public keys from %s&#34;, config.HYDRA_JWKS_URI)
         except Exception:
             self._logger.exception(
                 &#34;Unable to retrieve jwks, token login will be unavailable!&#34;
@@ -113,6 +114,13 @@ class OAuthService(Service, name=&#34;oauth_service&#34;):
                 algorithms=&#34;RS256&#34;,
                 options={&#34;verify_aud&#34;: False}
             )
+
+            if &#34;lobby&#34; not in decoded[&#34;scp&#34;]:
+                raise AuthenticationError(
+                    &#34;Token does not have permission to login to the lobby server&#34;,
+                    &#34;token&#34;
+                )
+
             return int(decoded[&#34;sub&#34;])
         except (InvalidTokenError, KeyError, ValueError):
             raise AuthenticationError(&#34;Token signature was invalid&#34;, &#34;token&#34;)</code></pre>
@@ -136,7 +144,8 @@ class OAuthService(Service, name=&#34;oauth_service&#34;):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">class OAuthService(Service, name=&#34;oauth_service&#34;):
+<pre><code class="python">@with_logger
+class OAuthService(Service, name=&#34;oauth_service&#34;):
     &#34;&#34;&#34;
     Service for managing the OAuth token logins and verification.
     &#34;&#34;&#34;
@@ -184,6 +193,7 @@ class OAuthService(Service, name=&#34;oauth_service&#34;):
                         jwk[&#34;kid&#34;]: RSAAlgorithm.from_jwk(jwk)
                         for jwk in jwks[&#34;keys&#34;]
                     }
+            self._logger.info(&#34;Got public keys from %s&#34;, config.HYDRA_JWKS_URI)
         except Exception:
             self._logger.exception(
                 &#34;Unable to retrieve jwks, token login will be unavailable!&#34;
@@ -206,6 +216,13 @@ class OAuthService(Service, name=&#34;oauth_service&#34;):
                 algorithms=&#34;RS256&#34;,
                 options={&#34;verify_aud&#34;: False}
             )
+
+            if &#34;lobby&#34; not in decoded[&#34;scp&#34;]:
+                raise AuthenticationError(
+                    &#34;Token does not have permission to login to the lobby server&#34;,
+                    &#34;token&#34;
+                )
+
             return int(decoded[&#34;sub&#34;])
         except (InvalidTokenError, KeyError, ValueError):
             raise AuthenticationError(&#34;Token signature was invalid&#34;, &#34;token&#34;)</code></pre>
@@ -242,6 +259,13 @@ class OAuthService(Service, name=&#34;oauth_service&#34;):
             algorithms=&#34;RS256&#34;,
             options={&#34;verify_aud&#34;: False}
         )
+
+        if &#34;lobby&#34; not in decoded[&#34;scp&#34;]:
+            raise AuthenticationError(
+                &#34;Token does not have permission to login to the lobby server&#34;,
+                &#34;token&#34;
+            )
+
         return int(decoded[&#34;sub&#34;])
     except (InvalidTokenError, KeyError, ValueError):
         raise AuthenticationError(&#34;Token signature was invalid&#34;, &#34;token&#34;)</code></pre>
@@ -297,6 +321,7 @@ async def get_public_keys(self) -&gt; dict:
                     jwk[&#34;kid&#34;]: RSAAlgorithm.from_jwk(jwk)
                     for jwk in jwks[&#34;keys&#34;]
                 }
+        self._logger.info(&#34;Got public keys from %s&#34;, config.HYDRA_JWKS_URI)
     except Exception:
         self._logger.exception(
             &#34;Unable to retrieve jwks, token login will be unavailable!&#34;
